# edge-iiot

./: .gitignore  Makefile  README.md  docker-compose.yaml  main.py  mlflow.db  pyproject.toml  requirements.txt
airflow/config/: airflow.cfg
airflow/dags/: hello_world_dag.py  train_pipeline.py  xgb_binary_pipeline.py
config/: airflow.cfg
dags/: train_pipeline.py
data/config/: valid_columns.yaml
data/processed/: data_pipeline.joblib
deployment/: app.py
docker/: airflow.dockerfile  mlflow.dockerfile
mlflow/: backend.db
mlflow-artifacts/1/models/m-60e64d30848a4e838bafa7a209c6277f/artifacts/: MLmodel  model.ubj
mlflow-artifacts/1/models/m-c969252cb3e247e483dc9b10a70029f0/artifacts/: MLmodel  requirements.txt
mlflow-artifacts/3/models/m-0ed8d8f7c2674a8885e2ea607fd0cffc/artifacts/: MLmodel  conda.yaml  model.ubj
mlflow-artifacts/3/models/m-b2814eb953c44147ac3c8a0571b785ca/artifacts/: MLmodel  model.ubj
notebooks/: explore.ipynb
src/pipelines/: x01_preprocess.py  x02_log_baseline_model.py  x03_optuna.py  x04_register_model.py
src/utils/: data_processing.py  logger.py  metrics.py
