[project]
name = "edge-iiot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.2",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
    "mlflow[extras]>=3.1.4",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "xgboost>=3.0.2",
]
